--- a/app/src/main/res/layout/drum_main.xml
+++ b/app/src/main/res/layout/drum_main.xml
@@ -55,23 +55,20 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
-
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/crash_cymbol_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/mid_tom_cardview"
-                app:layout_constraintHeight_percent="0.7"
-                >
+                app:layout_constraintDimensionRatio="1:1">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -79,27 +76,28 @@
                     android:textSize="10sp"
                     android:textStyle="bold"
                     android:textColor="@color/mainblack"
-                    android:layout_gravity="center"
-                    android:gravity="center"> <!-- 텍스트를 중앙에 정렬 -->
+                    android:gravity="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"> <!-- 텍스트를 중앙에 정렬 -->
                 </TextView>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/mid_tom_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/crash_cymbol_cardview"
                 app:layout_constraintEnd_toStartOf="@+id/ride_cymbal_cardview"
-                app:layout_constraintHeight_percent="0.7">
+                app:layout_constraintDimensionRatio="1:1">
 
-                <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -108,25 +106,27 @@
                     android:layout_gravity="center"
                     android:textColor="@color/mainblack"
                     android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="10sp">
                 </TextView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/ride_cymbal_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/mid_tom_cardview"
-                app:layout_constraintHeight_percent="0.7"
-                app:layout_constraintEnd_toEndOf="parent">
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintDimensionRatio="1:1">
 
                 <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
@@ -136,16 +136,16 @@
                     android:layout_gravity="center"
                     android:gravity="center"
                     android:textColor="@color/mainblack"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:textStyle="bold"
                     android:textSize="10sp">
                 </TextView>
-
-            </androidx.cardview.widget.CardView>
-
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
-
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -155,78 +155,78 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             >
-
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/smare_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/high_tom_cardview"
-                app:layout_constraintHeight_percent="0.7"
-                >
+                app:layout_constraintDimensionRatio="1:1">
+
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="SMARE"
-                    android:textColor="@color/mainblack"
                     android:textSize="10sp"
                     android:textStyle="bold"
-                    android:layout_gravity="center"
-                    android:gravity="center"> <!-- 텍스트를 중앙에 정렬 -->
+                    android:textColor="@color/mainblack"
+                    android:gravity="center"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"> <!-- 텍스트를 중앙에 정렬 -->
                 </TextView>
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/high_tom_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/smare_cardview"
                 app:layout_constraintEnd_toStartOf="@+id/low_tom_cardview"
-                app:layout_constraintHeight_percent="0.7">
+                app:layout_constraintDimensionRatio="1:1">
 
-                <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="HIGH\nTOM"
                     android:gravity="center"
                     android:layout_gravity="center"
-                    android:textStyle="bold"
                     android:textColor="@color/mainblack"
+                    android:textStyle="bold"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
                     android:textSize="10sp">
                 </TextView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            </androidx.cardview.widget.CardView>
-            <androidx.cardview.widget.CardView
-                xmlns:android="http://schemas.android.com/apk/res/android"
+            <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="0dp"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
-                card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 android:id="@+id/low_tom_cardview"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/high_tom_cardview"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.7">
+                app:layout_constraintDimensionRatio="1:1">
 
                 <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
@@ -235,16 +235,19 @@
                     android:text="LOW\nTOM"
                     android:layout_gravity="center"
                     android:gravity="center"
-                    android:textStyle="bold"
                     android:textColor="@color/mainblack"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    android:textStyle="bold"
                     android:textSize="10sp">
                 </TextView>
-
-            </androidx.cardview.widget.CardView>
-
-
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
         </androidx.constraintlayout.widget.ConstraintLayout>
+
+
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -284,20 +287,20 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.cardview.widget.CardView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
                 android:id="@+id/open_hihat_layout"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHeight_percent="0.7">
+                app:layout_constraintDimensionRatio="1:1">
 
                 <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
@@ -308,25 +311,29 @@
                     android:layout_gravity="center"
                     android:textStyle="bold"
                     android:textColor="@color/mainblack"
-                    android:textSize="10sp">
+                    android:textSize="10sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
                 </TextView>
 
-            </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <androidx.cardview.widget.CardView
+            <androidx.constraintlayout.widget.ConstraintLayout
                 xmlns:android="http://schemas.android.com/apk/res/android"
                 android:layout_width="wrap_content"
                 android:layout_height="0dp"
                 android:layout_margin="16dp"
-                app:cardCornerRadius="10dp"
-                app:contentPadding="20dp"
+                android:background="@drawable/round_card"
+                android:elevation="8dp"
+                android:padding="20dp"
                 card_view:cardBackgroundColor="#99A98F"
-                app:cardElevation="8dp"
                 android:id="@+id/close_hihat_layout"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toStartOf="@+id/open_hihat_layout"
-                app:layout_constraintHeight_percent="0.7">
+                app:layout_constraintDimensionRatio="1:1">
 
                 <!-- 내용을 추가하세요 (예: 텍스트뷰, 이미지뷰 등) -->
                 <TextView
@@ -337,10 +344,14 @@
                     android:layout_gravity="center"
                     android:textColor="@color/mainblack"
                     android:textStyle="bold"
-                    android:textSize="10sp">
+                    android:textSize="10sp"
+                    app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintEnd_toEndOf="parent">
                 </TextView>
 
-            </androidx.cardview.widget.CardView>
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 
