--- a/app/src/main/res/layout/activity_setting.xml
+++ b/app/src/main/res/layout/activity_setting.xml
@@ -344,6 +344,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:id="@+id/setting_logout_layout"
+                android:clickable="true"
                 android:layout_marginTop="15dp"
                 app:layout_constraintTop_toBottomOf="@id/setting_contact_layout"
                 app:layout_constraintStart_toStartOf="parent"
@@ -395,6 +396,7 @@
                 android:id="@+id/setting_withdrawal_layout"
                 android:layout_marginTop="15dp"
                 android:layout_marginBottom="15dp"
+                android:clickable="true"
                 app:layout_constraintTop_toBottomOf="@id/setting_logout_layout"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
