--- a/app/src/main/res/layout/detail_info.xml
+++ b/app/src/main/res/layout/detail_info.xml
@@ -19,7 +19,6 @@
             android:id="@+id/heartbtn"
             android:layout_width="40dp"
             android:layout_height="40dp"
-
             android:src="@drawable/dark_heart_empty"
             app:layout_constraintLeft_toLeftOf="parent"
             app:layout_constraintTop_toTopOf="parent"
@@ -158,6 +157,37 @@
                 android:textSize="20sp"
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/creditbtn"
+                app:layout_constraintBottom_toBottomOf="parent"/>
+        </androidx.constraintlayout.widget.ConstraintLayout>
+
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:layout_constraintTop_toBottomOf="@+id/creditlayout"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_marginVertical="20dp"
+            android:id="@+id/collablayout">
+
+            <ImageView
+                android:id="@+id/collabbtn"
+                android:layout_width="32dp"
+                android:layout_height="32dp"
+                android:src="@drawable/info_ppl"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/collabtxt"
+                android:layout_marginEnd="15dp"/>
+            <TextView
+                android:layout_marginLeft="20dp"
+                android:id="@+id/collabtxt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="콜라보레이션 참여하기"
+                android:textSize="20sp"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintStart_toEndOf="@+id/collabbtn"
                 app:layout_constraintBottom_toBottomOf="parent"/>
         </androidx.constraintlayout.widget.ConstraintLayout>
 
