--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -44,13 +44,16 @@
             android:paddingVertical="20dp"
             android:paddingRight="20dp">
 
-
-            <ImageView
+            <ToggleButton
                 android:id="@+id/heartbtn"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                android:src="@drawable/heart_outline_new"
+                android:background="@drawable/my_heart_btn"
+                android:checked="false"
                 app:layout_constraintHorizontal_weight="0.1"
+                android:text=""
+                android:textOff=""
+                android:textOn=""
                 app:layout_constraintTop_toTopOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintRight_toLeftOf="@+id/pick_songname"
