--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -153,7 +153,7 @@
                 android:id="@+id/playbtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/playbtn"/>
+                android:src="@drawable/testbtn"/>
 
 
             <ImageView
