--- a/app/src/main/res/layout/new_pickmusic.xml
+++ b/app/src/main/res/layout/new_pickmusic.xml
@@ -21,8 +21,8 @@
 
         <com.gauravk.audiovisualizer.visualizer.BlobVisualizer xmlns:custom="http://schemas.android.com/apk/res-auto"
             android:id="@+id/blob"
-            android:layout_width="400dp"
-            android:layout_height="400dp"
+            android:layout_width="300dp"
+            android:layout_height="300dp"
             custom:avColor="#687D54"
             custom:avDensity="0.5"
             custom:avSpeed="medium"
@@ -161,7 +161,7 @@
                 android:id="@+id/stopbtn"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
-                android:src="@drawable/stop"/>
+                android:src="@drawable/newstopbtn"/>
         </LinearLayout>
 
     </androidx.constraintlayout.widget.ConstraintLayout>
