--- a/app/src/main/res/layout/activity_setting_new.xml
+++ b/app/src/main/res/layout/activity_setting_new.xml
@@ -559,7 +559,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:cardCornerRadius="15dp"
+            app:cardCornerRadius="10dp"
+            android:layout_marginEnd="20dp"
+            android:layout_marginStart="20dp"
             android:id="@+id/detail_cardview"
             >
             <FrameLayout
